# ExcelTableCNN

./: .gitignore  LICENSE  README.md  cell_features.py  excel-cnn-testing.ipynb  pyproject.toml  requirements.txt  table_detector.py  train_test_composer.py
.github/workflows/: ci.yml
archive/: README.md  dl_tensors.ipynb  excel-cnn-testing.ipynb
archive/experimental_model/: anchor_generator.py  cell_featurizer.py  model.py  nms.py  roi_align.py  rpn.py
data/: README.md
excel_table_cnn/: __init__.py  cell_features.py  device.py  inference.py
excel_table_cnn/data/: census.py  converter.py  features.py  features_xls.py  loader.py  markup.py  pipeline.py  workbook.py
excel_table_cnn/dl_classification/: __init__.py  cnn.py  eval.py  spreadsheet_dataset.py  tensors.py  train_eval.py
excel_table_cnn/evaluation/: eob.py  evaluate.py
excel_table_cnn/ml_classification/: ml_classifier.py  utils.py
excel_table_cnn/model/: backbone.py  detector.py  grid_context.py  pbr.py  rcnn.py
excel_table_cnn/train_data_helpers/: __init__.py  dataset_loader.py  markup_loader.py
excel_table_cnn/train_test_helpers/: __init__.py  cell_features.py  dataset_loader.py  markup_loader.py  (+1 more)
notebooks/: train_kaggle_colab.ipynb
tests/: conftest.py  test_box_convention.py  test_census.py  test_dataset.py  test_device.py  test_eob.py  test_evaluate.py  test_features.py  test_features_xls.py  test_grid_context.py  test_inference.py  test_loader.py  test_model.py  test_mps_smoke.py  test_overfit.py  test_pbr.py  test_pipeline_cache.py  test_train_loop.py  test_workbook.py
(+11 files in other folders)
